# Scrapper_Ine

./: .gitignore  README.md  extractor.py  gitignore  html_fetcher.py  main_site_filtered.py  presenter.py  prueba.py  pyproject.toml  resp.text
Descarga/crew_html_extractor/crew_html_extractor/: .env.example  .gitignore  README.md  pyproject.toml
Descarga/crew_html_extractor/crew_html_extractor/src/crew_html_extractor/: __init__.py  cli.py  settings.py
Descarga/crew_html_extractor/crew_html_extractor/tests/: test_fetch_html.py
crewai_html_extractor/: crawl_cli.py  demo_cli.py  demo_notebook.ipynb  gitignore  requirements.txt
crewai_html_extractor/scraper/: Activate-Env.ps1  core.py  orchestrator.py
crewai_html_extractor/scraper/extractors/: html_tables.py  ine.py  network.py  tourism.py
crewai_html_extractor/scraper/utils/: presenter.py
outputs/: iana.htm  iana3.html  ine.html  segittur.html
outputs_restauracion/: dataitem_000.csv  dataitem_001.csv  record.json
src/crew_html_extractor/: __init__.py  run_example.py
src/crew_html_extractor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/crew_html_extractor/tasks/: extract_task.py
src/crew_html_extractor/tools/: fetch_rendered.py
